--- a/workflow-templates/luap-studio.yml
+++ b/workflow-templates/luap-studio.yml
@@ -13,5 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Hello world action step
+        uses: ./actions/ # Uses an action in the actions directory
+        id: hello
+        with:
+          who-to-greet: 'Mona the Octocat'
+
       - name: Run a one-line script
         run: echo Hello from Luap Studio
