--- a/workflow-templates/luap-studio.yml
+++ b/workflow-templates/luap-studio.yml
@@ -8,23 +8,4 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Hello world action step
-        uses: ./actions/ # Uses an action in the actions directory
-        id: hello
-        with:
-          who-to-greet: 'Mona the Octocat'
-
-      - name: Run a one-line script
-        run: echo Hello from Luap Studio
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          echo lol
+    uses: Luap-Studio/workflows/.github/workflow-templates/base.yml@main
